# thorspeak

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/nu/hyperworks/thorspeak/: MainActivity.kt  ThorSpeakApp.kt
app/app/src/main/java/nu/hyperworks/thorspeak/audio/: AudioCache.kt  Player.kt
app/app/src/main/java/nu/hyperworks/thorspeak/capture/: CaptureService.kt  FrameGate.kt  MlKitReader.kt  OverlayController.kt  ScreenCapturer.kt
app/app/src/main/java/nu/hyperworks/thorspeak/data/: MainViewModel.kt  SessionState.kt  SettingsRepository.kt
app/app/src/main/java/nu/hyperworks/thorspeak/net/: Dto.kt  ThorSpeakApi.kt  UpdateManager.kt
app/app/src/main/java/nu/hyperworks/thorspeak/ui/: FlashcardsScreen.kt  LookupSheet.kt  MainScreen.kt  RegionSelectScreen.kt  SettingsScreen.kt  Tokenize.kt
app/app/src/main/res/drawable/: ic_launcher.xml
app/app/src/main/res/values/: themes.xml
app/app/src/main/res/xml/: file_paths.xml
app/gradle/: libs.versions.toml
server/: .env.example  pyproject.toml  run.sh  thorspeak-server.service
server/tests/: test_llm.py  test_normalize.py
server/thorspeak_server/: anki.py  config.py  db.py  llm.py  lookup.py  main.py  normalize.py  ocr.py  translate.py  tts.py
